removing unused code